correct header spacing, tweak search spacing, ad vertical spacing styles

--- a/css/globals.css
+++ b/css/globals.css
@@ -502,6 +502,68 @@ a.text-success:focus {
   text-align: center;
 }
 
+/* Classes that apply to multiple element types
+--------------------------------------------------- */
+
+.pull-right {
+  float: right;
+}
+
+.pull-left {
+  float: left;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+.affix {
+  position: fixed;
+}
+
+
+
+.top-spacing0 {
+	margin-top: 0;
+}
+.top-spacing5 {
+	margin-top: 0.33333em;
+}
+.top-spacing10 {
+	margin-top: 0.666667em;
+}
+.top-spacing15 {
+	margin-top: 1em;
+}
+.top-spacing20 {
+	margin-top: 1.33333em;
+}
+.top-spacing25 {
+	margin-top: 1.666667em;
+}
+.top-spacing30 {
+	margin-top: 2em;
+}
+.top-spacing35 {
+	margin-top: 2.33333em;
+}
+.top-spacing40 {
+	margin-top: 2.666667em;
+}
+.top-spacing45 {
+	margin-top: 3em;
+}
+.top-spacing50 {
+	margin-top: 3..33333em;
+}
 
 
 
@@ -542,10 +604,20 @@ a.text-success:focus {
 ---------------------------------------- */
 
 
-h1#section-header {
+h1.site-title {
 	font-size: 2.4em;
 	font-family: Arial, Helvetica, sans-serif;
-	line-height:1.6666667em;  /*UPDATE*/
+	line-height:0.975em;;  /*UPDATE*/
+	color: #333333;
+}
+
+h1.site-title a {
+	color: #333;
+}
+
+p.site-description {
+	line-height: 1em;
+	margin: 0;
 }
 
 
