--- a/style.css
+++ b/style.css
@@ -247,28 +247,6 @@ li.nav-header {
   box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.075);
 }
 
-.lead {
-    font-family: Georgia,"Times New Roman",Times,serif;
-    font-size: 17px;
-    line-height: 28px;
-    color: #666666;
-    margin: 0px;
-}
-
-.page-content {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.page-content h2 + p,
-.page-content h3 +p,
-.page-content h4 +p,
-.page-content h5 +p,
-.page-content h6 +p,
-.footer-widgets h3.widget-title {
-	margin-top: 0;
-}
-
-
 
 
 /* ######################### */
@@ -292,25 +270,15 @@ li.nav-header {
 	background: url("img/headbg.jpg") repeat scroll 0 0 #003D79;
 }
 
-h1.site-title {
-	color: #333333;
-    font-family: "HelveticaNeue",Helvetica,Arial,sans-serif;
-    font-size: 37px;
-    line-height: 42px;
-    font-weight: normal;
-    padding-left: 20px;
-}
+
 
 div.bcause-lite h1.site-title {
-	line-height: 21px;
-	margin-top: 28px;
+	
 }
 
-div.bcause-lite h1.site-title a {
-	color: #333;
-}
 
-h1.page-title {
+
+h1.page-title {  /*Is this being used???*/
     font-size: 28px;
     font-weight: normal;
     line-height: 28px;
@@ -318,14 +286,7 @@ h1.page-title {
     margin-top: 0;
 }
 
-p.site-description {
-	font-size: 13px;
-	font-weight: bold;
-	margin: 0;
-	padding: 0px 0px 14px 20px;
-}
-
-#header-logo img {
+#header-logo img {/*Is this being used???*/
 	max-width: 1170px;
 	max-height: 84px;
 	height: auto;
@@ -334,6 +295,8 @@ p.site-description {
 .header-search form {
 	float: right;
 }
+
+
 
 /* ###################### */
 /* ----- Navigation ----- */
@@ -554,7 +517,7 @@ div.bcause-lite .container.content {
 /* --- Content Padding --- */
 
 .content-padding {
-	padding: 	21px 20px;
+	padding: 	20px 20px;
 }
 
 .content-padding-top {
